2009-03-18  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/ChartPanel.java
    (mouseWheelHandler): New field,
    (isMouseWheelEnabled): New method,
    (setMouseWheelEnabled): Likewise,
    * source/org/jfree/chart/MouseWheelHandler.java: New class,
    * source/org/jfree/chart/axis/ValueAxis.java
    (resizeRange2): New method,
    * source/org/jfree/chart/demo/BarChartDemo1.java
    (BarChartDemo1): Enable mouse wheel,
    * source/org/jfree/chart/demo/TimeSeriesChartDemo1.java
    (createDemoPanel): Enable mouse wheel,
    * source/org/jfree/chart/plot/CategoryPlot.java
    (zoomRangeAxes): Modify anchored zoom behaviour,
    * source/org/jfree/chart/plot/XYPlot.java
    (zoomDomainAxes): Likewise,
    (zoomRangeAxes): Likewise.

2009-03-15  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/category/SlidingCategoryDataset.java
    (getColumnKeys): Fixed loop index.

2009-03-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/annotations/XYAnnotationBoundsInfo.java:
    New interface,
    * source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
    (getAnnotations): New method,
    * source/org/jfree/chart/annotations/XYDataImageAnnotation.java:
    Implemented XYAnnotationBoundsInfo interface,
    (includeInDataBounds): New field,
    (XYDataImageAnnotation(Image, double, double, double, double, boolean)):
    New constructor,
    (getIncludeInDataBounds): New methodn,
    (getXRange): Likewise,
    (getYRange): Likewise,
    (equals): Check new field,
    * source/org/jfree/chart/plot/XYPlot.java
    (getDataRange): Include annotation bounds.

2009-03-06  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/SamplingXYLineRenderer.java:
    New class.

2009-03-06  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/xy/IntervalXYDelegate.java
    (hashCode): Implemented,