@@ -1,3 +1,8 @@
+2009-03-19  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/renderer/category/BarRenderer3D.java
+    (drawRangeLine): New method override.
+
 2009-03-18  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/ChartPanel.java
